--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body {
-  width: 100vw;
-  height: 100vh;
-}
 html {
   font-size: 13px;
 }
