--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,22 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  width: 100%;
+  height: 100vh;
+}
 html {
   font-size: 13px;
+}
+.text {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* number of lines to show */
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
